# gegl-java

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_java_filters.pl  pom.xml
JWeb/: pom.xml
JWeb/WebRoot/assets/: theme.css  theme.min.css  variables.less
JWeb/src/main/java/com/jibee/deratiseur/: AssetsServlet.java  EmbeddedServer.java
JWeb/src/main/java/com/jibee/deratiseur/processor/: ImageProcessorServlet.java  ImageRenderer.java
JWeb/src/main/java/com/jibee/deratiseur/web/: AdjustementsPanel.java  AssetsServlet.java  CollectionDisplay.java  EmbeddedServer.java  FullSizeImageDisplay.java  InfosPanel.java  InspectorPanel.java  LibraryPanel.java  LinearImageCollectionProxy.java  MainApplication.java  MainImageDisplay.java  MainView.java  MenuBar.java  ProcessorTest.java  Servlet.java  Thumbnail.java  TopToolbar.java
JWeb/src/main/java/com/jibee/deratiseur/web/model/: AugmentedUserLibrary.java  EventsVirtualFolder.java  FacesVirtualFolder.java  FileBackedImage.java  IImage.java  IImageCollectionModel.java  IImageStack.java  ISelectableImageCollectionModel.java  ImageCollection.java  MemorySelectableCollectionProxy.java  PhysicalFolder.java  PlacesVirtualFolder.java  Project.java  UserLibrary.java  iFolder.java
JWeb/src/main/java/com/jibee/gegl/: Babl.java  Filter.java  Gegl.java  GeglBuffer.java  GeglColor.java  GeglConfig.java  GeglCurve.java  GeglFilter.java  GeglNode.java  GeglVector.java  InputPad.java  OutputPad.java  Pad.java  ParameterOutOfRangeException.java  Source.java
JWeb/src/main/java/com/jibee/gegl/filters/gegl/: Add.java  AlienMap.java  Antialias.java  ApplyLens.java  Average.java  BilateralFilter.java  BilateralFilterFast.java  BlendReflect.java  BoxBlur.java  BrightnessContrast.java  BufferSink.java  BufferSource.java  BumpMap.java  C2g.java  Cache.java  Cartoon.java  CastFormat.java  CellNoise.java  ChannelMixer.java  Checkerboard.java  Clone.java  Color.java  ColorEnhance.java  ColorExchange.java  ColorReduction.java  ColorRotate.java  ColorTemperature.java  ColorToAlpha.java  ColorWarp.java  ComponentExtract.java  ContrastCurve.java  ConvertFormat.java  ConvolutionMatrix.java  CopyBuffer.java  Crop.java  Cubism.java  DcrawLoad.java  Deinterlace.java  DemosaicBimedian.java  DemosaicSimple.java  (+158 more)
JWeb/src/main/java/com/jibee/gegl/filters/svg/: Clear.java  ColorBurn.java  Darken.java  (+20 more)
JWeb/src/main/java/com/jibee/gegl/priv/: Gegl.java  GeglRectangle.java  GeglSamplerType.java  TypedPointer.java
JWeb/src/main/java/org/gstreamer/lowlevel/: OurGTypeMapper.java
MainWeb/: CMakeLists.txt  MainWeb.kdev4  main.cpp  start.sh
MainWeb/.kdev4/: MainWeb.kdev4
dependancies/: CMakeLists.txt  MingW64.cmake  README.md
dependancies/patches/: exiv2.patch  libraw.patch  zlib.patch
dependancies/patches/gegl/: 01_gettextversion.diff  02_list_operations.patch
gegl-cmd/: pom.xml
gegl-cmd/src/main/java/: Main.java
src/main/java/com/jibee/gegl/: Babl.java  BablComponent.java  BablFish.java  BablFormat.java  BablModel.java  BablSampling.java  BablType.java  CombiningFilter.java  ContainerFilter.java  DualSink.java  Filter.java  Gegl.java  GeglBuffer.java  GeglColor.java  GeglFilter.java  GeglNode.java  GeglOperation.java  GeglTileHandler.java  InputPad.java  OutputPad.java  Pad.java  ParameterOutOfRangeException.java  Sink.java  Source.java  iFilter.java
src/main/java/com/jibee/gegl/annotations/: GeglFilterOp.java
src/main/java/com/jibee/gegl/filters/gegl/: Absolute.java  Add.java  AlienMap.java  Antialias.java  ApplyLens.java  Average.java  BilateralFilter.java  BilateralFilterFast.java  BlendReflect.java  BoxBlur.java  BrightnessContrast.java  BufferSink.java  BufferSource.java  BumpMap.java  C2g.java  Cache.java  Cartoon.java  CastFormat.java  CastSpace.java  CellNoise.java  ChannelMixer.java  Checkerboard.java  Clone.java  Color.java  ColorEnhance.java  ColorExchange.java  ColorOverlay.java  ColorReduction.java  ColorRotate.java  ColorTemperature.java  ColorToAlpha.java  ColorWarp.java  ComponentExtract.java  ContrastCurve.java  ConvertFormat.java  ConvertSpace.java  ConvolutionMatrix.java  CopyBuffer.java  Crop.java  Cubism.java  (+183 more)
src/main/java/com/jibee/gegl/filters/svg/: Clear.java  ColorBurn.java  ColorDodge.java  Darken.java  Difference.java  Dst.java  DstAtop.java  DstIn.java  DstOut.java  DstOver.java  Exclusion.java  HardLight.java  Lighten.java  Multiply.java  Overlay.java  Plus.java  Screen.java  Src.java  SrcAtop.java  SrcIn.java  SrcOut.java  SrcOver.java  Xor.java
src/main/java/com/jibee/gegl/priv/: BablAPI.java  Environment.java  Gegl.java  GeglRectangle.java  TypedPointer.java
src/main/java/org/gstreamer/lowlevel/: OurGTypeMapper.java
src/test/java/deratiseur/: Processor.java
(+10 files in other folders)
